--- a/src/stylesheet/style.css
+++ b/src/stylesheet/style.css
@@ -39,6 +39,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -70,10 +73,18 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+
+  height: 100%;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
